src/test/ui/consts/const-eval/const_fn_ptr.stderr
warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/const_fn_ptr.rs:11:5
   |
LL |     X(x)
   |     ^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/const_fn_ptr.rs:15:5
   |
LL |     X_CONST(x)
   |     ^^^^^^^^^^
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/const_fn_ptr.rs:18:14
   |
LL | const fn foo(x: fn(usize) -> usize, y: usize)  -> usize {
   |              ^
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/const_fn_ptr.rs:19:5
   |
LL |     x(y)
   |     ^
help: skipping check that does not even have a feature gate
  --> $DIR/const_fn_ptr.rs:19:5
   |
LL |     x(y)
   |     ^^^^

error: `-Zunleash-the-miri-inside-of-you` may not be used to circumvent feature gates, except when testing error paths in the CTFE engine

error: aborting due to previous error; 1 warning emitted

